<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.apitomy</groupId>
    <artifactId>apitomy-axiom</artifactId>
    <version>2.1.3-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Apitomy Axiom</name>
    <description>Event-driven project orchestration platform</description>
    <url>https://github.com/Apitomy/apitomy-axiom</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <modules>
        <module>common/api</module>
        <module>core</module>
        <module>engine/spi</module>
        <module>engine/opencode</module>
        <module>manager</module>
        <module>actors/spi</module>
        <module>actors/claude-code</module>
        <module>actors/human</module>
        <module>events/core</module>
        <module>events/github</module>
        <module>events/jira</module>
        <module>notifications/spi</module>
        <module>notifications/slack</module>
        <module>notifications/telegram</module>
        <module>app</module>
    </modules>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Quarkus -->
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.version>3.33.1</quarkus.platform.version>

        <!-- Plugins -->
        <compiler-plugin.version>3.14.0</compiler-plugin.version>
        <surefire-plugin.version>3.5.2</surefire-plugin.version>
        <version.build.helper.maven.plugin>3.6.1</version.build.helper.maven.plugin>
        <apitomy-codegen.version>1.3.0</apitomy-codegen.version>
        <jandex-plugin.version>3.2.7</jandex-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-manager</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-engine-spi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-engine-opencode</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-actors-spi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-actors-claude-code</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-actors-human</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-events-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-events-github</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-events-jira</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-notifications-spi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-notifications-slack</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-notifications-telegram</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apitomy</groupId>
                <artifactId>apitomy-axiom-ui-bundle</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>${quarkus.platform.group-id}</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.platform.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.apitomy</groupId>
                    <artifactId>apitomy-codegen-maven-plugin</artifactId>
                    <version>${apitomy-codegen.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.smallrye</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>${jandex-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>make-index</id>
                            <goals>
                                <goal>jandex</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>ui</id>
            <modules>
                <module>ui-bundle</module>
            </modules>
        </profile>
    </profiles>
</project>
